fix(issue/9674): collapse some buttons

--- a/source/refined-github.css
+++ b/source/refined-github.css
@@ -284,3 +284,25 @@ fieldset[class*='ReviewMenu-module__RadioGroup'] {
 [class*='HiddenDiffPatch-module__gridColumnTemplate'] {
 	margin-block: 6em;
 }
+
+/* Make collapsed diffs more visually distinct */
+/* Info: https://github.com/refined-github/refined-github/issues/9674 */
+/* Test: https://github.com */
+.hide-sm.hide-md.prc-Stack-Stack-UQ9k6 {
+	gap: 0;
+	a {
+		width: 2.1em;
+	}
+	a:nth-of-type(1) {
+		border-top-right-radius: 0;
+		border-bottom-right-radius: 0;
+	}
+	a:nth-of-type(2) {
+		border-radius: 0;
+		border-inline: none;
+	}
+	a:nth-of-type(3) {
+		border-top-left-radius: 0;
+		border-bottom-left-radius: 0;
+	}
+}
